fix: use go.work.sum for Go cache dependency
GitHub Actions cache was failing because it looked for go.sum in the
root directory. This project uses a Go workspace with go.work.sum in
the root and module-specific go.sum files in subdirectories.

Changed all setup-go actions to use cache-dependency-path: go.work.sum
instead of cache: true.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
+          cache-dependency-path: go.work.sum
 
       - name: Install gofumpt
         run: go install mvdan.cc/gofumpt@latest
@@ -78,7 +78,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
+          cache-dependency-path: go.work.sum
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
@@ -108,7 +108,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
+          cache-dependency-path: go.work.sum
 
       - name: Build binary
         env:
@@ -384,7 +384,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-          cache: true
+          cache-dependency-path: go.work.sum
 
       - name: Get version from tag
         id: version
