feat: add Nix store caching with cache-nix-action
Nix builds can be slow in CI. Added nix-community/cache-nix-action to
cache the Nix store between workflow runs. This uses GitHub Actions'
built-in cache and is more stable than Magic Nix Cache (which relies
on undocumented APIs that broke in early 2025).

Cache keys are based on runner OS and hash of Nix files (*.nix and
flake.lock) to ensure cache invalidation when dependencies change.

Added to all jobs that use Nix:
- format-check
- nix-development  
- test (coverage)
- release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
         with:
           logger: pretty
 
+      - name: Cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', 'flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+
       - name: Check Nix formatting
         run: |
           echo "Checking Nix file formatting..."
@@ -151,6 +157,12 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/determinate-nix-action@v3
 
+      - name: Cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', 'flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+
       - name: Test development shell
         run: |
           echo "Testing Nix development shell..."
@@ -183,6 +195,12 @@ jobs:
 
       - name: Install Nix
         uses: DeterminateSystems/determinate-nix-action@v3
+
+      - name: Cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', 'flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
 
       - name: Cache Go modules
         uses: actions/cache@v4
@@ -256,6 +274,12 @@ jobs:
 
       - name: Install Nix
         uses: DeterminateSystems/determinate-nix-action@v3
+
+      - name: Cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', 'flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
 
       - name: Download all coverage reports
         uses: actions/download-artifact@v4
@@ -379,6 +403,12 @@ jobs:
 
       - name: Install Nix
         uses: DeterminateSystems/determinate-nix-action@v3
+      - name: Cache Nix store
+        uses: nix-community/cache-nix-action@v5
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', 'flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+
 
       - name: Setup Go
         uses: actions/setup-go@v5
